@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300003, CPAN::Meta::Converter version 2.110440'
+generated_by: 'Dist::Zilla version 4.300003, CPAN::Meta::Converter version 2.112621'
 license: lgpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Config-Model-TkUI
 recommends:
   Tk::ObjScanner: 0
 requires:
-  Config::Model: 1.253
+  Config::Model: 1.263
   Exception::Class: 0
   File::Slurp: 0
   Log::Log4perl: 1.11
@@ -27,4 +27,4 @@ requires:
   Tk::DirSelect: 0
   Tk::Pod: 0
   Tk::Tree: 0
-version: 1.330
+version: 1.331
